--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -53,11 +53,11 @@
       },
       "outputs": [],
       "source": [
-        "USERNAME = \"itay\" ### Add you name here in lowercase\n",
-        "BUCKET_NAME = \"gs://tmls-workshop-bucket\"\n",
-        "REGION = \"us-central1\"\n",
-        "PROJECT_ID = \"tmls-demo\"\n",
-        "PROJECT_NUMBER = \"1033395281527\"\n",
+        "USERNAME = \"<lowercase user name>\" # @param username\n",
+        "BUCKET_NAME = \"gs://<USED BUCKET>\" # @param bucket name\n",
+        "REGION = \"<REGION>\" # @param region\n",
+        "PROJECT_ID = \"<GCP PROJECT ID>\" # @param project id\n",
+        "PROJECT_NUMBER = \"<GCP PROJECT NUMBER>\" # @param project number\n",
         "PIPELINE_NAME = f\"tmls-workshop-diamonds-predictor-{USERNAME}\" \n",
         "\n",
         "import sys\n",
